--- a/frontend/review.html
+++ b/frontend/review.html
@@ -3,69 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Appointments - AIIMS Medical Portal</title>
+  <title>Appointments - AIIMS Portal</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <a href="/home" class="navbar-brand">AIIMS Medical Portal</a>
-    <ul class="navbar-nav">
-      <li><a href="/home" class="nav-link">Home</a></li>
-      <li><a href="/service" class="nav-link">Services</a></li>
-      <li><a href="/review" class="nav-link active">Appointments</a></li>
-      <li><a href="#" class="nav-link" id="logout-btn">Logout</a></li>
-    </ul>
-  </nav>
-
-  <div class="container">
-    <div class="page-header">
-      <h1>Book an Appointment</h1>
-      <p>Schedule your visit with our medical experts</p>
+  <header class="header">
+    <div class="container">
+      <nav class="nav">
+        <div class="logo">AIIMS Portal</div>
+        <ul class="nav-links">
+          <li><a href="/home">Home</a></li>
+          <li><a href="/service">Services</a></li>
+          <li><a href="/review">Appointments</a></li>
+          <li><span>Welcome, <span id="userName"></span></span></li>
+          <li><button class="btn btn-logout" onclick="logout()">Logout</button></li>
+        </ul>
+      </nav>
     </div>
+  </header>
 
-    <div class="form-container">
-      <form id="review-form">
-        <div class="form-group">
-          <label for="doctor-name">Doctor Name</label>
-          <input type="text" id="doctor-name" required>
-        </div>
-
-        <div class="form-group">
-          <label for="department">Department</label>
-          <select id="department" required>
-            <option value="">Select Department</option>
-            <option value="Cardiology">Cardiology</option>
-            <option value="Neurology">Neurology</option>
-            <option value="Orthopedics">Orthopedics</option>
-            <option value="Pediatrics">Pediatrics</option>
-            <option value="Oncology">Oncology</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label for="appointment-date">Appointment Date</label>
-          <input type="date" id="appointment-date" required>
-        </div>
-
-        <div class="form-group">
-          <label for="image">Upload Image (if any)</label>
-          <input type="file" id="image" accept="image/*">
-        </div>
-
-        <div class="form-group">
-          <label for="description">Description</label>
-          <textarea id="description" required></textarea>
-        </div>
-
-        <div class="form-group">
-          <label for="review">Review/Notes</label>
-          <textarea id="review" required></textarea>
-        </div>
-
-        <button type="submit" class="btn">Book Appointment</button>
-      </form>
+  <main class="main-content">
+    <div class="container">
+      <h1 class="page-title">Book Appointment & Review</h1>
+      
+      <div class="card">
+        <h2 class="card-title">Appointment Form</h2>
+        <form id="appointmentForm">
+          <div class="form-group">
+            <label for="department">Department</label>
+            <select class="form-control" id="department" name="department" required>
+              <option value="">Select Department</option>
+              <option value="Cardiology">Cardiology</option>
+              <option value="Neurology">Neurology</option>
+              <option value="Orthopedics">Orthopedics</option>
+              <option value="Pediatrics">Pediatrics</option>
+              <option value="Oncology">Oncology</option>
+              <option value="Dermatology">Dermatology</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="appointmentDate">Appointment Date</label>
+            <input type="date" class="form-control" id="appointmentDate" name="appointmentDate" required>
+          </div>
+          <div class="form-group">
+            <label for="image">Upload Image (Optional)</label>
+            <input type="file" class="form-control" id="image" name="image" accept="image/*">
+          </div>
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="review">Review</label>
+            <textarea class="form-control" id="review" name="review" rows="3" required></textarea>
+          </div>
+          <button type="submit" class="btn">Submit Appointment</button>
+        </form>
+      </div>
+      
+      <h2 class="page-title">Appointment Reviews</h2>
+      <div id="postsContainer">
+        <!-- Posts will be loaded here dynamically -->
+      </div>
     </div>
-  </div>
+  </main>
 
   <script src="js/review.js"></script>
 </body>
